1. Добавлен allure 2. Добавлен slf4j и logback 3. Исправлены замечания