@@ -1,37 +1,24 @@
 package ru.buttonone;
 
-import ru.buttonone.pojo.Category;
-import ru.buttonone.pojo.Pet;
-import ru.buttonone.pojo.Tag;
-import ru.buttonone.utilities.ConfProperties;
+import ru.buttonone.models.Category;
+import ru.buttonone.models.Pet;
+import ru.buttonone.models.Tag;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
+import static ru.buttonone.constants.CommonConstant.*;
+
 public class PetStoreTestData {
-    private final ConfProperties confProperties = new ConfProperties();
 
     public Pet petData() {
-        return new Pet(Integer.valueOf(confProperties.getProperty("pet-id")),
-                categoryData(),
-                confProperties.getProperty("pet-name"),
-                photoUrlsData(),
-                tagData(),
-                confProperties.getProperty("pet-status"));
+        return new Pet(PET_ID, categoryData(), PET_NAME, PET_PHOTO_LIST, tagData(), PET_STATUS);
     }
 
     public Category categoryData() {
-        return new Category(Integer.valueOf(confProperties.getProperty("category-id")),
-                confProperties.getProperty("category-name"));
+        return new Category(CATEGORY_ID, CATEGORY_NAME);
     }
 
-    public ArrayList<Tag> tagData() {
-        return new ArrayList<>(List.of(new Tag(Integer.valueOf(confProperties.getProperty("tag-id")),
-                confProperties.getProperty("tag-name"))));
-    }
-
-    public ArrayList<String> photoUrlsData() {
-        return new ArrayList<>(Arrays.asList(confProperties.getProperty("pet-photoUrls-list").split(";")));
+    public List<Tag> tagData() {
+        return List.of(new Tag(TAG_ID, TAG_NAME));
     }
 }
